Updated the Scarlet notebook

--- a/models/video/Scarlet.ipynb
+++ b/models/video/Scarlet.ipynb
@@ -452,7 +452,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip freeze > requirements.txt"
+    "# -------------------------------------\n",
+    "# 13. LISTING THE REQUIRED DEPENDENCIES\n",
+    "# -------------------------------------\n",
+    "\n",
+    "!pip freeze > requirements.txt\n"
    ]
   }
  ],
